yaml/pipeline/jenkins/jenkins/templates/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - name: jenkins-ui
      port: 8080
      targetPort: 8080
    - name: jenkins-exct
      port: 50000
      targetPort: 50000
