yaml/pipeline/jenkins/jenkins/templates/04-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - jenkins.mykloud.andikaahmad.com
      secretName: letsencrypt-prod-jenkins
  rules:
  - host: jenkins.mykloud.andikaahmad.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
